<resources>
    <string name="app_name">StuFor</string>
    <string name="following">Following</string>
    <string name="hot_topics">Hot Topics</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="midnight_12pm">Midnight 12PM</string>
    <string name="alerts">Alerts</string>
    <string name="my_account">My Account</string>
    <string name="feed">Feed</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
</resources>